--- a/contacto.html
+++ b/contacto.html
@@ -69,6 +69,10 @@
                     </li>
                     <li class="uk-nav-divider"></li>
                     <li>
+                        <a href="animacion.html"><i class="fas fa-play text-green"></i> Animación</a>
+                    </li>
+                    <li class="uk-nav-divider"></li>
+                    <li>
                         <a href="nosotros.html">
                             <i class="fas fa-users text-green"></i> Nosotros</a>
                     </li>
