--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                 <i class="fas fa-paint-brush text-green"></i> Diseño Gráfico
             </a>
             </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="animacion.html">
+                                <i class="fas fa-play text-green"></i> Animación
+                            </a>
+                        </li>
                 <li class="nav-item active">
                     <a class="nav-link  text-white" href="nosotros.html">
                         <i class="fas fa-users text-green"></i> Nosotros
