--- a/nosotros.html
+++ b/nosotros.html
@@ -62,6 +62,10 @@
                             <a href="diseño.html"><i class="fas fa-paint-brush text-green"></i> Diseño Gráfico</a>
                         </li>
                         <li class="uk-nav-divider"></li>
+                        <li>
+                            <a href="animacion.html"><i class="fas fa-play text-green"></i> Animación</a>
+                        </li>
+                        <li class="uk-nav-divider"></li>
                         <li class="uk-active">
                             <a href="nosotros.html"><i class="fas fa-users text-green"></i> Nosotros</a>
                         </li>
